Upgrade to JDK 17, Nashron still using (openjdk version) Fix SQL file run error: birthday error Remove GUI for Weblaf-complete not support JDK 17